Added bg image &started blocking out segments

--- a/index.html
+++ b/index.html
@@ -30,4 +30,17 @@
         <img src="./assets/images/Logan Photo (2).jpg" alt="Photo of Logan Monson" width="579px" />
         <h1>Logan Monson</h1>
     </main>
+    <section class="about-me">
+        <h1>About Me</h1>
+        <p>EYTI FGEYlaaaaaaaalalalalalalalalalalalalallalalalalalalalalalalalalalalalalaU FGYEOFUYEG YE y GYEUO GFYUO GYU GY W G YEO  EYGFYUWB UEBFUYWBFY U Y UO YF EWY EUW U FE</p>
+    </section>
+    <section>
+        <h1 class="projects">My Projects</h1>
+        <p> blah blahbscjnana projects:</p>
+        <ul>
+            <li>
+                <
+            </li>
+        </ul>
+    </section>
 </body>
