--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="./assets/images/Kevin.png" alt="Logan's Logo"></img>
+    <header class="navigation">
+        <img src="./assets/images/Kevin.png" alt="my logo" width="66px" />
+        <h1>Logan Monson</h1>
         <nav>
             <ul class="nav-links">
                 <li>
@@ -26,21 +27,46 @@
             </ul>
         </nav>
     </header>
-    <main class="main-header">
-        <img src="./assets/images/Logan Photo (2).jpg" alt="Photo of Logan Monson" width="579px" />
-        <h1>Logan Monson</h1>
-    </main>
-    <section class="about-me">
-        <h1>About Me</h1>
-        <p>EYTI FGEYlaaaaaaaalalalalalalalalalalalalallalalalalalalalalalalalalalalalalaU FGYEOFUYEG YE y GYEUO GFYUO GYU GY W G YEO  EYGFYUWB UEBFUYWBFY U Y UO YF EWY EUW U FE</p>
-    </section>
-    <section>
-        <h1 class="projects">My Projects</h1>
-        <p> blah blahbscjnana projects:</p>
-        <ul>
-            <li>
-                <
-            </li>
-        </ul>
-    </section>
+
+    <main>
+        <header class="container">
+            <img class="portrait" src="./assets/images/Logan Photo (2).jpg" alt="Photo of Logan Monson" />
+            <h1>Up-and-coming in the coding world!</h1>
+        </header>
+        
+        <aside>
+           <div> Image </div>
+            <h1>About Me</h1>
+        </aside>
+        <section>
+            <h1>About Me</h1>
+            <p></p>
+        </section>
+        <!---
+        <aside>
+            <div> image </div>
+            <h1>Projects</h1>
+        </aside>
+        <section>
+            <h1>My Projects</h1>
+            <p>Here are some projects that have worked on:</p>
+            <ul>
+                <li>
+                
+                </li>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+            </ul>
+        </section>
+    -->
+        <section>
+
+        </section>
+        <footer>
+
+        </footer>
 </body>
