Working on flexboxes/logos for portfolio

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <h1 class="h1">Up-and-coming in the coding world!</h1>
         </header>
         
-        <aside id="about-me">
-           <img src="./assets/images/427-4273575_white-question-mark-vector-png-download-white-question.png" alt="my logo" width="100px"/>
+        <aside class="about-me">
+           <img src="./assets/images/IMG-0977.PNG" alt="my logo" width="175px"/>
             <h1>About Me</h1>
         </aside>
         <section>
@@ -44,35 +44,25 @@
             <p>I have lived in Seattle for over 20 years now, and have been blessed to have a beautiful family of five with my girlfriend. My hobbies include; writing music, playing videogames, drawing, and running table-top games with my friends. I hope to one day work in the videogame industry; either as a programmer or composer!</p>
         </section>
         
-        <aside id="projects">
-            <img src="./assets/images/png-clipart-white-flat-taskbar-icons-foldersizes-white-folder-icon-thumbnail.png" alt="icon of a folder" width="100px">
+        <aside class="projects">
+            <img src="./assets/images/IMG-0978.PNG" alt="logo of folder" width="175px"/>
             <h1>Projects</h1>
         </aside>
-        <section Class="flex-container">
+        <section class="flex-container">
             <h1>My Projects</h1>
             <p>Here are some projects that I have worked on:</p>
-            <article class="first">
-                <img src="./assets/images/Kevin.png" alt="my logo" width="100px">
-                <p>Project 1</p>
-            </article>
-            <article class="rest">
-                <img src="./assets/images/"
-                <p>Project 2</p>
-            </article>
-            <article class="rest">Project 3</article>
-            <article class="rest">Project 4</article>
-            <article class="rest">Project 5</article>
-            <article class="rest">Project 6</article>
+            <article class="first"></article>
+            <article class="rest"></article>
+            <article class="rest"></article>
+            <article class="rest"></article>
+            <article class="rest"></article>
         </section>
-        <aside id="contacts">
-            <img src="./assets/images/Kevin.png" alt="my logo" width="100px"/>
-            <h1>Contact Me</h1>
+
+        <aside>
+            <img src="./assets/images/IMG-0979.PNG" alt="logo of envelope" width="175px"/>
+            <h1>Contact</h1>
         </aside>
-        <section>
-            <h1>Contact Me!</h1>
-
-
-        </section>
+        <section></section>
         <footer>
 
         </footer>
