--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <h1 class="h1">Up-and-coming in the coding world!</h1>
         </header>
         
-        <aside class="about-me">
-           <img src="./assets/images/IMG-0977.PNG" alt="my logo" width="175px"/>
+        <aside id="about-me">
+           <img src="./assets/images/IMG-0977.PNG" alt="my logo" />
             <h1>About Me</h1>
         </aside>
         <section>
@@ -44,26 +44,46 @@
             <p>I have lived in Seattle for over 20 years now, and have been blessed to have a beautiful family of five with my girlfriend. My hobbies include; writing music, playing videogames, drawing, and running table-top games with my friends. I hope to one day work in the videogame industry; either as a programmer or composer!</p>
         </section>
         
-        <aside class="projects">
+        <aside id="projects">
             <img src="./assets/images/IMG-0978.PNG" alt="logo of folder" width="175px"/>
             <h1>Projects</h1>
         </aside>
         <section class="flex-container">
             <h1>My Projects</h1>
             <p>Here are some projects that I have worked on:</p>
-            <article class="first"></article>
-            <article class="rest"></article>
-            <article class="rest"></article>
-            <article class="rest"></article>
-            <article class="rest"></article>
+            <article class="flex-container">
+                <a id="thumbnails-first" href="https://loggamon.github.io/Code_Refactor/" width="200px">
+                <img id="thumbnails-first" src="./assets/images/Horiseon_Screenshot_2.png" href="https://loggamon.github.io/Code_Refactor/">
+                </a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                <img id="thumbnails-rest" src="./assets/images/game-development-programming-languages.jpg">
+                </a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                <img id="thumbnails-rest" src="./assets/images/old-robot.jpg">
+                </a>
+                <a href="https://pics.loveforquotes.com/timetousecss-imgflip-com-are-css-jokes-still-funny-44308860.png">
+                <img id="thumbnails-rest" src="./assets/images/marslandscape.jpg">
+                </a>
+            </article>
         </section>
 
-        <aside>
+        <aside id="contacts">
             <img src="./assets/images/IMG-0979.PNG" alt="logo of envelope" width="175px"/>
             <h1>Contact</h1>
         </aside>
-        <section></section>
+        <section class="contact-section">
+            <form action="">
+                <label for="email" id="email">Enter your email!:</label>
+                <input type="email" name="email">
+                <input type="submit"></input>
+            </form>
+            <form>
+                <label for="comment">Leave a Comment!:</label>
+                <textarea type="comment" id="comment" rows="3" columns="50"></textarea>
+                <input type="submit"></input>
+            </form>
+        </section>
         <footer>
-
+            <h3>Loggamon Productions; est. 2022</h3>
         </footer>
 </body>
