--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <h1>Contact</h1>
         </aside>
         <section class="contact-section">
+            <h1>Reach Me</h1>
             <form action="">
                 <label for="email" id="email">Enter your email!:</label>
                 <input type="email" name="email">
