simplifying my css

--- a/new-index.html
+++ b/new-index.html
@@ -53,16 +53,16 @@
                 <h1>My Projects</h1>
                 <p>Here are some projects that I have worked on:</p>
                 <article class="thumbnails">
-                    <a class="web-card" href="https://exotic-car-auction-abln.herokuapp.com/" width="200px">
+                    <a href="https://exotic-car-auction-abln.herokuapp.com/">
                         <img id="thumbnails-first" src="./assets/images/CarAuction.png">
                     </a>
-                    <a class="web-card" href="https://tech-blog-social-platform.herokuapp.com/">
+                    <a href="https://tech-blog-social-platform.herokuapp.com/">
                         <img id="thumbnails-rest" src="./assets/images/Tech-Blog.png">
                     </a>
-                    <a class="web-card" href="https://github.com/Loggamon/Team_Profile_Generator">
+                    <a href="https://github.com/Loggamon/Team_Profile_Generator">
                         <img id="thumbnails-rest" src="./assets/images/teamProfileGenerator.png">
                     </a>
-                    <a class="web-card" href="https://ofelia1870.github.io/charging-station-finder/">
+                    <a href="https://ofelia1870.github.io/charging-station-finder/">
                         <img id="thumbnails-rest" src="./assets/images/CarCharger.png">
                     </a>
                 </article>
