--- a/new-index.html
+++ b/new-index.html
@@ -28,14 +28,14 @@
 
     <main class="container">
         
-        <header class="header">
-            <img class="portrait" src="./assets/images/Logan Photo Square.jpg" alt="Photo of Logan Monson" width="500px"/>
+        <header>
+            <img class="portrait" src="./assets/images/Logan Photo Square.jpg" alt="Photo of Logan Monson"/>
             <h1 class="h1">Up-and-coming in the coding world!</h1>
         </header>
 
         <div class="mini-container">
             <aside id="about-me">
-                <img src="./assets/images/IMG-0977.PNG" alt="my logo" width="175px"/>
+                <img class="icons" src="./assets/images/IMG-0977.PNG" alt="my logo" width="175px"/>
                 <h1>About Me</h1>
             </aside>
             <section>
@@ -46,7 +46,7 @@
         </div>
         <div class="mini-container">
             <aside id="projects">
-                <img src="./assets/images/IMG-0978.PNG" alt="logo of folder" width="175px"/>
+                <img class="icons" src="./assets/images/IMG-0978.PNG" alt="logo of folder" width="175px"/>
                 <h1>Projects</h1>
             </aside>
             <section class="flex-container">
@@ -71,7 +71,7 @@
         </div>
         <div class="mini-container">
             <aside id="contacts">
-                <img src="./assets/images/IMG-0979.PNG" alt="logo of envelope" width="175px"/>
+                <img class="icons" src="./assets/images/IMG-0979.PNG" alt="logo of envelope" width="175px"/>
                 <h1>Contact</h1>
             </aside>
             <section class="contact-section">
