--- a/new-index.html
+++ b/new-index.html
@@ -51,21 +51,36 @@
             </aside>
             <section class="flex-container">
                 <h1>My Projects</h1>
-                <br />
                 <p>Here are some projects that I have worked on:</p>
+                <br />
                 <article class="thumbnails">
-                    <a href="https://exotic-car-auction-abln.herokuapp.com/">
-                        <img id="thumbnails-first" src="./assets/images/CarAuction.png">
-                    </a>
-                    <a href="https://tech-blog-social-platform.herokuapp.com/">
-                        <img id="thumbnails-rest" src="./assets/images/Tech-Blog.png">
-                    </a>
-                    <a href="https://github.com/Loggamon/Team_Profile_Generator">
-                        <img id="thumbnails-rest" src="./assets/images/teamProfileGenerator.png">
-                    </a>
-                    <a href="https://ofelia1870.github.io/charging-station-finder/">
-                        <img id="thumbnails-rest" src="./assets/images/CarCharger.png">
-                    </a>
+                    <div>
+                        <a href="https://exotic-car-auction-abln.herokuapp.com/">
+                            <img id="thumbnails-first" src="./assets/images/CarAuction.png">
+                        </a>
+                        <h5>Exotic Car Auction</h5>
+                    </div>
+                    <br />
+                    <div>
+                        <a href="https://tech-blog-social-platform.herokuapp.com/">
+                            <img id="thumbnails-rest" src="./assets/images/Tech-Blog.png">
+                        </a>
+                        <!-- <h5>Tech Blog Demonstration</h5> -->
+                    </div>
+                    <br />
+                    <div>
+                        <a href="https://github.com/Loggamon/Team_Profile_Generator">
+                            <img id="thumbnails-rest" src="./assets/images/teamProfileGenerator.png">
+                        </a>
+                    <!-- <h5>Team Profile Generator</h5> -->
+                    <br />
+                    <div>
+                        <a href="https://ofelia1870.github.io/charging-station-finder/">
+                            <img id="thumbnails-rest" src="./assets/images/CarCharger.png">
+                        </a>
+                        <!-- <h5>Charging Station Finder</h5> -->
+                    </div>
+                    <br />
                 </article>
             </section>
         </div>
